needs-lb/istio-ingress/templates/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
spec:
  hosts:
  - "*"
  gateways:
  - j-hub/istio-ingress
  http:
  - name: "all-routes"
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: proxy-public.j-hub.svc.cluster.local
        port:
          number: 80
